syntax = "proto3";

package course;

option go_package = "github.com/dmehra2102/learning-platform/shared/proto/course";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service CourseService {
    rpc CreateCourse(CreateCourseRequest) returns (CourseResponse);
    rpc GetCourse(GetCourseRequest) returns (CourseResponse);
    rpc UpdateCourse(UpdateCourseRequest) returns (CourseResponse);
    rpc DeleteCourse(DeleteCourseRequest) returns (google.protobuf.Empty);
    rpc ListCourses(ListCoursesRequest) returns (ListCoursesResponse);
    rpc PublishCourse(PublishCourseRequest) returns (CourseResponse);
    rpc GetCoursesByInstructor(GetCoursesByInstructorRequest) returns (ListCoursesResponse);
    rpc AddModule(AddModuleRequest) returns (ModuleResponse);
    rpc UpdateModule(UpdateModuleRequest) returns (ModuleResponse);
    rpc DeleteModule(DeleteModuleRequest) returns (google.protobuf.Empty);
    rpc GetModules(GetModulesRequest) returns (ListModulesResponse);
    rpc AddLesson(AddLessonRequest) returns (LessonResponse);
    rpc UpdateLesson(UpdateLessonRequest) returns (LessonResponse);
    rpc DeleteLesson(DeleteLessonRequest) returns (google.protobuf.Empty);
    rpc GetLessons(GetLessonsRequest) returns (ListLessonsResponse);
    rpc GetCourseContent(GetCourseContentRequest) returns (CourseContentResponse);
}

enum CourseStatus {
    DRAFT = 0;
    PUBLISHED = 1;
    ARCHIVED = 2;
}

enum CourseLevel {
    BEGINNER = 0;
    INTERMEDIATE = 1;
    ADVANCED = 2;
}

message Course {
    string id = 1;
    string title = 2;
    string description = 3;
    string instructor_id = 4;
    string thumbnail_url = 5;
    CourseStatus status  = 6;
    CourseLevel level = 7;
    double price = 8;
    string category = 9;
    repeated string tags = 10;
    int32 duration_minutes = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    int32 enrolled_count = 14;
    double average_rating = 15;
}

message Module {
    string id = 1;
    string course_id = 2;
    string title = 3;
    string description = 4;
    int32 order_index = 5;
    google.protobuf.Timestamp created_at = 6;
}

message Lesson {
    string id = 1;
    string module_id = 2;
    string title = 3;
    string description = 4;
    string video_id = 5;
    int32 duration_seconds = 6;
    int32 order_index = 7;
    bool is_preview = 8;
    google.protobuf.Timestamp created_at = 9;
}

message CreateCourseRequest {
  string title = 1;
  string description = 2;
  string instructor_id = 3;
  string thumbnail_url = 4;
  CourseLevel level = 5;
  double price = 6;
  string category = 7;
  repeated string tags = 8;
}

message CourseResponse {
  Course course = 1;
}

message GetCourseRequest {
  string id = 1;
}

message UpdateCourseRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string thumbnail_url = 4;
  optional CourseLevel level = 5;
  optional double price = 6;
  optional string category = 7;
  repeated string tags = 8;
}

message DeleteCourseRequest {
  string id = 1;
}

message ListCoursesRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string category = 3;
  optional CourseLevel level = 4;
  optional CourseStatus status = 5;
  optional string search = 6;
}

message ListCoursesResponse {
  repeated Course courses = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message PublishCourseRequest {
  string id = 1;
}

message GetCoursesByInstructorRequest {
  string instructor_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message AddModuleRequest {
  string course_id = 1;
  string title = 2;
  string description = 3;
  int32 order_index = 4;
}

message ModuleResponse {
  Module module = 1;
}

message UpdateModuleRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional int32 order_index = 4;
  optional string course_id = 5;
}

message DeleteModuleRequest {
  string id = 1;
  string course_id = 2;
}

message ListModulesResponse {
  repeated Module modules = 1;
}

message GetModulesRequest {
  string course_id = 1;
}

message AddLessonRequest {
  string module_id = 1;
  string title = 2;
  string description = 3;
  string video_id = 4;
  int32 duration_seconds = 5;
  int32 order_index = 6;
  bool is_preview = 7;
  string course_id = 8;
}

message LessonResponse {
  Lesson lesson = 1;
}

message UpdateLessonRequest {
  string id = 1;
  string course_id = 2;
  string module_id = 3;
  optional string title = 4;
  optional string description =5;
  optional int32 order_index = 6;
  optional bool is_preview = 7;
  
}

message DeleteLessonRequest {
  string id = 1;
  string course_id = 2;
  string module_id = 3;
}

message GetLessonsRequest {
  string module_id = 1;
}

message ListLessonsResponse {
  repeated Lesson lessons = 1; 
}

message GetCourseContentRequest {
  string course_id = 1;
}

message CourseContentResponse {
  Course course = 1;
  repeated ModuleWithLessons modules = 2;
}

message ModuleWithLessons {
  Module module = 1;
  repeated Lesson lessons = 2;
}