syntax = "proto3";

package user;

option go_package = "github.com/dmehra2102/learning-platform/shared/proto/user";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc ValidatToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc GetUsersByIds(GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
    rpc ChangeUserRole(ChangeUserRoleRequest) returns (UserResponse);
}

enum UserRole {
    STUDENT = 0;
    INSTRUCTOR = 1;
    ADMIN = 2;
}

enum UserStatus {
    ACTIVE = 0;
    INACTIVE = 1;
    SUSPENDED = 2;
}

message User {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    UserRole role = 5;
    UserStatus status = 6;
    string avatar_url = 7;
    string bio = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    UserRole role = 5;
}

message RegisterResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message GetUserRequest {
    string id = 1;
}

message UserResponse {
    User user = 1;
}

message UpdateUserRequest {
    string id = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string avatar_url = 4;
    optional string bio = 5;
}

message DeleteUserRequest {
    string id = 1;
}

message ListUsersRequest {
    int32 page = 1;
    int32 page_size = 2;
    optional UserRole role = 3;
    optional UserStatus status = 4;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
    UserRole role = 3;
}

message GetUsersByIdsRequest {
    repeated string ids = 1;
}

message GetUsersByIdsResponse {
    repeated User users = 1;
}

message ChangeUserRoleRequest {
    string id = 1;
    UserRole role = 2;
}